--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "next/core-web-vitals",
+    "next/core-web-vitals", "plugin:react-hooks/recommended","plugin:react/recommended",
     "plugin:storybook/recommended"
   ]
 }
