--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^14.1.0",
     "@react-three/drei": "^9.83.9",
     "@react-three/fiber": "^8.14.1",
     "@types/node": "20.6.0",
@@ -18,14 +19,28 @@
     "@types/react-dom": "18.2.7",
     "@types/three": "^0.156.0",
     "autoprefixer": "10.4.15",
+    "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
+    "convert": "^4.14.0",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^13.4.19",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1",
     "next": "13.4.19",
     "node-sass": "^9.0.0",
+    "nodemailer": "^6.9.8",
+    "popmotion": "^11.0.5",
     "postcss": "8.4.29",
+    "props-dragger": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-rnd": "^10.4.1",
     "sass": "^1.66.1",
+    "showdown": "^2.1.0",
+    "styled-jsx": "^5.1.2",
+    "svglint": "^2.6.0",
     "tailwindcss": "3.3.3",
     "three": "^0.156.1",
     "typescript": "5.2.2"
@@ -39,9 +54,14 @@
     "@storybook/nextjs": "^7.4.0",
     "@storybook/react": "^7.4.0",
     "@storybook/testing-library": "^0.2.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/nodemailer": "^6.4.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.13",
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
-    "storybook": "^7.4.0"
+    "storybook": "^7.4.0",
+    "tailwindcss-textshadow": "^2.1.3"
   }
 }
